# pet_django4_game

./: pyproject.toml
dart0s_site/: manage.py
dart0s_site/dart0s_site/: asgi.py  settings.py  urls.py  wsgi.py
dart0s_site/polls/: views.py
